--- a/.eslintrc
+++ b/.eslintrc
@@ -43,7 +43,7 @@
     "multiline-comment-style": ["error", "starred-block"],
     "no-array-constructor": "error",
     "no-bitwise": "error",
-    "no-console": "error",
+    "no-console": "warn",
     "no-continue": "error",
     "no-else-return": "error",
     "no-eq-null": "error",
