--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
+    "@types/bignum": "0.0.29",
     "@types/bunyan": "^1.8.7",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.4",
@@ -61,6 +62,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "bignum": "^0.13.1",
     "bunyan": "^1.8.15"
   }
 }
