--- a/.github/workflows/main-push-pull.yml
+++ b/.github/workflows/main-push-pull.yml
@@ -58,7 +58,7 @@ jobs:
           node-version: "16"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build application
         run: npm run build
@@ -88,7 +88,7 @@ jobs:
           node-version: "16"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Build application
         run: npm run build
@@ -118,7 +118,7 @@ jobs:
           node-version: "16"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - uses: actions/setup-python@v2
         with:
