--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint-sol": "solhint ./contracts/**/*.sol",
     "plant": "npx node-plantuml ./docs/specs",
     "prepare": "husky install",
-    "test": "mocha --timeout 10000 --exit --recursive --require ts-node/register \"test/**/*.test.ts\""
+    "test": "mocha --timeout 10000 --exit --recursive --require ts-node/register \"test/**/*.test.ts\"",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
@@ -59,14 +60,16 @@
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
     "solhint": "^3.3.6",
-    "ts-node": "^10.2.1",
     "truffle": "^5.5.11",
-    "truffle-plugin-verify": "^0.5.23",
+    "truffle-plugin-verify": "^0.5.25",
+    "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "bignum": "^0.13.1",
-    "bunyan": "^1.8.15"
+    "bunyan": "^1.8.15",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0"
   }
 }
